--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "main": "server.js",
-  
   "scripts": {
-    
     "start": "node server.js",
     "server": "nodemon server.js"
   },
-  
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
